# Auto-job-searcher

./: AGENTS.md
job_searcher_ai/: .env.example  .gitignore  README.md  app.py  pyproject.toml
job_searcher_ai/config/: settings.yaml
job_searcher_ai/data/: manual_jobs.json  profile_master.md
job_searcher_ai/docs/: conversation_add_lever_ashby_board_discovery_2026-04-14.md  conversation_architecture_image_readme_2026-07-03.md  conversation_auto_vacancies_retry_2026-04-11.md  conversation_configurable_ranking_checkpoint_interval_2026-04-16.md  conversation_custom_career_pages_2026-04-09.md  conversation_custom_render_logging_2026-04-11.md  conversation_custom_source_summary_fix_2026-04-10.md  conversation_explainable_talent_matching_2026-07-03.md  conversation_feed_discovered_ats_into_search_2026-04-14.md  conversation_fix_llm_assessment_lists_2026-04-14.md  conversation_generic_filter_snapshots_2026-04-11.md  conversation_generic_site_filters_and_fraunhofer_2026-04-11.md  conversation_job_board_finder_profile_integration_2026-04-13.md  conversation_keyword_pack_and_site_filter_outputs_2026-04-12.md  conversation_limit_llm_to_shortlist_2026-04-16.md  conversation_llm_job_timing_2026-04-16.md  conversation_ollama_keyword_progress_logging_2026-04-12.md  conversation_profile_keyword_backfill_2026-04-13.md  conversation_query_filter_scoring_2026-04-14.md  conversation_rank_jobs_progress_2026-04-16.md  conversation_ranking_checkpointing_2026-04-16.md  conversation_rendered_career_pages_2026-04-10.md  conversation_rendered_retry_fix_2026-04-10.md  implementation_decisions.md  (+11 more)
(+78 files in other folders)
